refactor: test_node重新添加入编译

--- a/src/camera/CMakeLists.txt
+++ b/src/camera/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories("${CMAKE_SOURCE_DIR}/include")
 
 add_executable(stream_node "src/stream_node.cpp" "src/mindvision.cpp")
 add_executable(video_node "src/video_node.cpp")
-# add_executable(test_node "src/test_node.cpp")
+add_executable(test_node "src/test_node.cpp" "src/mindvision.cpp")
 # add_executable(gray_node "src/gray_node.cpp")
 
 ament_target_dependencies(
@@ -48,12 +48,16 @@ ament_target_dependencies(
   "cv_bridge"
 )
 
-# ament_target_dependencies(
-#   test_node
-#   "rclcpp"
-#   "OpenCV"
-# #   "MVSDK"
-# )
+ament_target_dependencies(
+  test_node
+  "rclcpp"
+  "OpenCV"
+# "MVSDK"
+)
+
+target_link_libraries(test_node
+  MVSDK
+)
 
 # target_link_libraries(test_node
 #   MVSDK
@@ -77,7 +81,7 @@ install(TARGETS
   stream_node
   video_node
   # gray_node
-  # test_node
+  test_node
   DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
