feat: 添加配置参数

--- a/assets/config.toml
+++ b/assets/config.toml
@@ -3,3 +3,7 @@ version = 1.0
 
 [camera]
 version = "MV" # MV：MindVision；HK：Hikvision
+
+[aim_aromr]
+model_path = "./assets/model/best-8.onnx"
+classes = ["1", "2", "3", "4", "base", "qsz", "sb", "null"]
