--- a/src/aim_armor/package.xml
+++ b/src/aim_armor/package.xml
@@ -14,6 +14,7 @@
   <depend>OpenCV</depend>
   <depend>cv_bridge</depend>
   <depend>onnxruntime</depend>
+  <depend>interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
