--- a/assets/config.toml
+++ b/assets/config.toml
@@ -8,5 +8,9 @@ version = "MV"  # MV：MindVision；HK：Hikvision
 model_path = "./assets/model/best-8.onnx"
 classes = ["1", "2", "3", "4", "base", "qsz", "sb", "null"]
 
+[serial]
+device_name= "/dev/tty0"
+baud_rate = 115200
+
 [test]
 test_video = "./1.avi"
