perf: 移除test的编译

--- a/src/camera/CMakeLists.txt
+++ b/src/camera/CMakeLists.txt
@@ -21,11 +21,11 @@ ament_auto_find_build_dependencies()
 
 add_executable(stream_node "src/stream_node.cpp" "src/mindvision.cpp")
 add_executable(video_node "src/video_node.cpp")
-add_executable(test_node "src/test_node.cpp" "src/mindvision.cpp")
+# add_executable(test_node "src/test_node.cpp" "src/mindvision.cpp")
 
 
 target_link_libraries(stream_node MVSDK)
-target_link_libraries(test_node MVSDK)
+# target_link_libraries(test_node MVSDK)
 
 ament_target_dependencies(
   stream_node
@@ -43,19 +43,19 @@ ament_target_dependencies(
   "cv_bridge"
 )
 
-ament_target_dependencies(
-  test_node
-  "rclcpp"
-  "OpenCV"
-)
+# ament_target_dependencies(
+#   test_node
+#   "rclcpp"
+#   "OpenCV"
+# )
 
 target_include_directories(stream_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 
-target_include_directories(test_node PUBLIC
-$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-$<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
+# target_include_directories(test_node PUBLIC
+# $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+# $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 
 target_include_directories(video_node PUBLIC
 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -64,7 +64,7 @@ $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 install(TARGETS
   stream_node
   video_node
-  test_node
+  # test_node
   DESTINATION lib/${PROJECT_NAME})
 
 
