fix: 修复原有编译错误

--- a/src/serial/CMakeLists.txt
+++ b/src/serial/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
 
-add_executable(serial_node "src/serial_node.cpp")
+add_executable(serial_node "src/serial_node.cpp" "src/serial.cpp")
 
 
 ament_target_dependencies(
