--- a/src/aim_armor/CMakeLists.txt
+++ b/src/aim_armor/CMakeLists.txt
@@ -18,29 +18,9 @@ find_package(interfaces REQUIRED)
 ament_auto_find_build_dependencies()
 
 
-# add_executable(test1 "src/test/test1.cpp")
-# add_executable(test2 "src/test/test2.cpp")
-add_executable(detector_node "src/detector_node.cpp" "src/armor_detector.cpp")
+add_executable(detector_node "src/detector_node.cpp" "src/armor_detector.cpp" "src/lights.cpp")
 add_executable(tracker_node "src/tracker_node.cpp")
 
-# ament_target_dependencies(
-#   test1
-#   "rclcpp"
-#   "sensor_msgs"
-#   "OpenCV"
-#   "cv_bridge"
-#   "OpenVINO"
-# )
-
-# ament_target_dependencies(
-#   test2
-#   "rclcpp"
-#   "sensor_msgs"
-#   "OpenCV"
-#   "cv_bridge"
-#   "OpenVINO"
-  
-# )
 
 ament_target_dependencies(
   detector_node
@@ -52,17 +32,11 @@ ament_target_dependencies(
   "interfaces"
 )
 
-# target_link_libraries(test1 openvino)
-# target_link_libraries(test2 openvino)
+ament_target_dependencies(
+  tracker_node
+)
+
 target_link_libraries(detector_node openvino)
-
-# target_include_directories(test1 PUBLIC
-#   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-#   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
-
-# target_include_directories(test2 PUBLIC
-#   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-#   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 
 target_include_directories(detector_node PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -73,8 +47,6 @@ target_include_directories(tracker_node PUBLIC
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 
 install(TARGETS 
-  # test1
-  # test2
   detector_node
   tracker_node
   DESTINATION lib/${PROJECT_NAME})
