feat: 更新配置文件读写

--- a/assets/config.toml
+++ b/assets/config.toml
@@ -20,6 +20,9 @@ saturation = 100      # 饱和度
 auto_exposure = false # 是否开启自动曝光
 exposure_time = 30    # 曝光时间 (ms)
 
+[hikvision]
+exposure_time = 10    # 曝光时间 (ms)
+
 [aim_aromr]
 model_path = "assets/model/best-8.onnx"
 classes = ["1", "2", "3", "4", "base", "qsz", "sb", "null"]
