chore: 多个更改   - fix: 修复OpenCV库引入   - feat: 适配最新的Armor结构体   - chore: 更改视频流播放速度

--- a/src/aim_armor/CMakeLists.txt
+++ b/src/aim_armor/CMakeLists.txt
@@ -37,6 +37,7 @@ ament_target_dependencies(
   "rclcpp"
   "sensor_msgs"
   "interfaces"
+  "OpenCV"
 )
 
 target_link_libraries(detector_node openvino)
