--- a/src/camera/CMakeLists.txt
+++ b/src/camera/CMakeLists.txt
@@ -20,10 +20,28 @@ include_directories(${CMAKE_SOURCE_DIR}/dependencies/HKSDK/include/)
 find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
+
+# 获取 ROS 发行版环境变量
+if(DEFINED ENV{ROS_DISTRO})
+  set(ROS_DISTRO $ENV{ROS_DISTRO})
+else()
+  message(FATAL_ERROR "ROS_DISTRO is not defined")
+endif()
+
+# 根据 ROS 版本设置宏
+if(ROS_DISTRO STREQUAL "humble")
+  add_definitions(-DROS_HUMBLE)
+elseif (ROS_DISTRO STREQUAL "iron")
+  add_definitions(-DROS_IRON)
+else()
+  message(WARNING "Unknown ROS distribution: ${ROS_DISTRO}")
+endif()
+
+
 add_executable(stream_node "src/stream_node.cpp" "src/mindvision.cpp" "src/hikvision.cpp")
 add_executable(video_node "src/video_node.cpp")
 
-target_link_libraries(stream_node 
+target_link_libraries(stream_node
   MVSDK
   MvCameraControl
   FormatConversion
