--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -18,6 +18,23 @@ find_package(sensor_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
 
 
+# 获取 ROS 发行版环境变量
+if(DEFINED ENV{ROS_DISTRO})
+  set(ROS_DISTRO $ENV{ROS_DISTRO})
+else()
+  message(FATAL_ERROR "ROS_DISTRO is not defined")
+endif()
+
+# 根据 ROS 版本设置宏
+if(ROS_DISTRO STREQUAL "humble")
+  add_definitions(-DROS_HUMBLE)
+elseif (ROS_DISTRO STREQUAL "iron")
+  add_definitions(-DROS_IRON)
+else()
+  message(WARNING "Unknown ROS distribution: ${ROS_DISTRO}")
+endif()
+
+
 add_executable(getstream src/getstream.cpp)
 
 ament_target_dependencies(
