--- a/src/serial/CMakeLists.txt
+++ b/src/serial/CMakeLists.txt
@@ -22,6 +22,7 @@ ament_target_dependencies(
   serial_node
   "rclcpp"
   "interfaces"
+  "serial_driver"
 )
 
 target_include_directories(serial_node PUBLIC
