--- a/src/serial/package.xml
+++ b/src/serial/package.xml
@@ -11,6 +11,7 @@
 
   <depend>rclcpp</depend>
   <depend>interfaces</depend>
+  <depend>serial_driver</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
